Ajout du concept générique dans la création d'un candidat